# Polar

./: .travis.yml  CMakeLists.txt  Config.h.in  INSTALL.md  README.md  update.txt
cmake/: FindCBC.cmake  FindCGL.cmake  FindCLP.cmake  FindCOINUTILS.cmake  FindOSI.cmake
examples/: CMakeLists.txt  Polar_test.cpp  link.cpp
examples/gear/: gear.cpp
examples/nonlinear/: CbcBranchLink.cpp
include/Cbc/: CbcObject.cpp  CbcObjectUpdateData.cpp  cbcUpdate.cpp  cbcUpdate.hpp  cbcUpdatePriv.hpp  config_default.h
include/Cbc/Core/: CbcNode.hpp
include/polar/: Config.h
solvers/: CMakeLists.txt
solvers/CbcPlus/: CbcSolver.cpp  main.cpp
src/: CMakeLists.txt
src/Cbc/Branch/: CbcBranchDynamic.cpp
